--- a/dashboard.html
+++ b/dashboard.html
@@ -6,8 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Dashboard
-        </title>
+        <title>Dashboard</title>
         <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <link rel="stylesheet" href="style.css">
         <script src="index.js" ></script>
@@ -20,9 +19,6 @@
                 <li><a href="">GS 170 - Career Development</a></li>
                 <li><a href="">WDD 331 - Advanced CSS</a></li>
             </ul>
-            
-        </nav>
-
-        
+        </nav>      
     </body>
 </html>
