--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="https://forms.gle/bsHieMHcRSyUTeLGA">COMM 310 - Creating Online Media</a></li>
-                <li><a href="https://forms.gle/JLihM3Vhhy6idjg38">CSE 341 - Web Backend Development II</a></li>
+                <li><a href="https://docs.google.com/spreadsheets/d/1otUgr4yvgTEfybeJEMoEOj-DRfggnh0XIYYB7dNhehg/edit?usp=sharing">CSE 341 - Web Backend Development II</a></li>
                 <li><a href="">GS 170 - Career Development</a></li>
                 <li><a href="">WDD 331 - Advanced CSS</a></li>
             </ul>
