--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="https://docs.google.com/spreadsheets/d/18abDvyz66plSoED9SvDj1TOvXa-6sZdyO6uIfl0941U/edit?usp=sharing">COMM 310 - Creating Online Media</a></li>
                 <li><a href="https://docs.google.com/spreadsheets/d/1otUgr4yvgTEfybeJEMoEOj-DRfggnh0XIYYB7dNhehg/edit?usp=sharing">CSE 341 - Web Backend Development II</a></li>
-                <li><a href="">GS 170 - Career Development</a></li>
+                <li><a href="https://docs.google.com/spreadsheets/d/1gxoP8kgZngrmROjxM8CaBQuZFtW-uTEjIhBvAOeKrt4/edit?usp=sharing">GS 170 - Career Development</a></li>
                 <li><a href="">WDD 331 - Advanced CSS</a></li>
             </ul>
         </nav>      
